--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "vanilla-components is a lightweight UI component library built with native javascript and based on web components. Therefore, you don't need any build tools and can download and use it directly.",
   "main": "dist/vanilla-components.esm.js",
   "scripts": {
+    "dev": "live-server src --port=3000 --no-browser",
     "scan": "node build-components.js",
     "build": "node build-components.js && rollup -c rollup.config.js"
   },
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
+    "live-server": "^1.2.2",
     "rollup": "^2.79.1",
     "rollup-plugin-delete": "^3.0.1"
   }
