--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,6 +19,6 @@ jobs:
    - name: build
      run: npm run build
    - name: publish
-     run: npm publish
+     run: npm publish --access public
      env:
        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
