--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cirolee/vanilla-components",
-  "version": "0.0.1-rc.2",
+  "version": "0.0.1-beta.1",
   "type": "module",
   "description": "vanilla-components is a lightweight UI component library built with native javascript and based on web components. Therefore, you don't need any build tools and can download and use it directly.",
   "main": "dist/vanilla-components.esm.js",
   "scripts": {
     "dev": "live-server src --port=3000 --no-browser",
     "scan": "node build-components.js",
-    "build": "node build-components.js && rollup -c rollup.config.js"
+    "build": "npm run scan && rollup -c rollup.config.js"
   },
   "files": [
     "dist"
